--- a/Company_Stock_Market_Sentimental_Analysis.ipynb
+++ b/Company_Stock_Market_Sentimental_Analysis.ipynb
@@ -2,6 +2,16 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/hongyeehua/projects/blob/main/Company_Stock_Market_Sentimental_Analysis.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "source": [
         "# **Company Stock Market Sentimental Analysis**\n",
         "\n",
@@ -64,6 +74,7 @@
         "---\n",
         "\n",
         "### **Improvements to be made:**\n",
+        "- Develop front-end for the tool, potentially Streamlit.\n",
         "- Include foreign companies which are not in US stock market, use a translation model to process articles in foreign languages\n",
         "- Splitting into cases $\\rightarrow$ trial users (more hallucinations for news summarisation) & professional users (more accurate and reliable for news summarisation)\n",
         "- Training model further to more efficiently\n",
@@ -112,35 +123,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Q7ZItHaEOTTl",
-        "outputId": "aa0d26cc-7c4e-478d-df38-3c07a88d486a"
+        "id": "Q7ZItHaEOTTl"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "What is your Cohere API key?\n",
-            "TqNim7S803C7Pz7pLmGYb38PZkiDeceA1wkFDDTf\n",
-            "What is your AlphaVantage API key?\n",
-            "KK6JVIIT1YZ51460\n",
-            "What is your prospective company's ticker symbol?\n",
-            "GOOG\n",
-            "How many articles do you want to analyse? (Up to 200 for trial users)\n",
-            "20\n",
-            "\n",
-            " Overall recent market sentiment:  \n",
-            " Neutral \n",
-            " Summarization of current market news:  \n",
-            " Alphabet Inc has added a new update to its music app that lets users automatically download recently played songs on Android. The new update allows users to download up to 200 recently played songs. The users may also find this feature already enabled on their devices. Meanwhile, Alphabet has announced that US creators can now create podcasts in YouTube Studio and the inclusion of podcasts in the company's music app is coming soon.\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "def get_yahoo_shortname(symbol): #function to lookup company ticker's name\n",
         "    response = urllib.request.urlopen(f'https://query2.finance.yahoo.com/v1/finance/search?q={symbol}')\n",
@@ -269,7 +256,8 @@
   ],
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
