Realised I made a pun

--- a/Company_Stock_Market_Sentimental_Analysis.ipynb
+++ b/Company_Stock_Market_Sentimental_Analysis.ipynb
@@ -50,7 +50,7 @@
         "---\n",
         "### **How does this work?**\n",
         "\n",
-        "Well, I'm glad you asked my friend, it's definitely been a journey to make this function.\n",
+        "Well, I'm glad you asked my friend, it's definitely been a journey to make this function. (haha get it)\n",
         "\n",
         "Essentially,\n",
         "\n",
